2008-04-02  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkcolor-x11.c: Don't call XFreeColormap on foreign
	colormaps.  Found by Daniel Berrange.

2008-04-02  Björn Lindqvist  <bjourne@gmail.com>

	* tests/autotestfilechooser.c: Cover
	GTK_FILE_CHOOSER_ACTION_CREATE_FOLDER action in tests for current
	name. (#346058, Joe Halliwell)

2008-04-02  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=492134 - The file
	chooser incorrectly substitutes and expands a ~ when you type it
	in the filename entry.

	* gtk/gtkfilesystemunix.c (expand_tilde): Ensure that empty
	basenames result in a slash-terminated pathname.
	gtk_file_system_unix_parse() is correct, but it was splitting
	"/home/username" into path="/home" and file_part="username", which
	is not what the caller wants when the entry has just "~" or
	"~username".

2008-04-02  Tor Lillqvist  <tml@novell.com>

	* gtk/Makefile.am: Don't bother compiling gtksearchenginebeagle.c
	and gtksearchenginetracker.c on Windows.

	* gtk/gtksearchengine.c: Don't define HAVE_BEAGLE and HAVE_TRACKER
	on Windows.

2008-04-01  Cody Russell  <bratsche@gnome.org>

	* configure.in: Bump required Cairo to 1.5.2.

	* gtk/gtkprintoperation-win32.c: Add support for using the new
	cairo_win32_printing_surface for printing.  Also fixed to use
	cairo_surface_show_page(). (#488833 and #521178)

2008-03-31  Cody Russell  <bratsche@gnome.org>

        * demos/gtk-demo/printing.c (draw_page): Move down each line in         
        units of text_height rather than in units of data->font_size.
        (totally awesome catch by Dom Lachowicz)

2008-03-28  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkevents-quartz.c: (gdk_event_translate),
	(_gdk_quartz_events_trigger_crossing_events): Defer the generated
	event to the mainloop and don't generate one at all if the
	toplevel didn't change. Use the actual window and not the toplevel